style: fix layout issues

--- a/frontend/assets/style/main.less
+++ b/frontend/assets/style/main.less
@@ -34,12 +34,9 @@ html {
 }
 
 body {
-  .limitPageWidth();
   min-height: 100%;
-  margin: 0 auto !important;
+  margin: 0 ;
   padding: 0;
-  background-color: @colorGrayLightest;
-  box-shadow: 0 2px 12px 0 rgba(0,0,0,.2);
   // Brand typo
   font-family: Arial, sans-serif !important;
   text-rendering: optimizeLegibility;
@@ -49,6 +46,14 @@ body {
   height: auto !important;
   -webkit-tap-highlight-color: transparent;
   //
+
+  > div {
+    .limitPageWidth();
+    margin: 0 auto !important;
+    padding: 0;
+    background-color: @colorGrayLightest;
+    box-shadow: 0 2px 12px 0 rgba(0,0,0,.2);
+  }
 }
 
 a {
